--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Todo List</title>
 	</head>
-	<body>
+	<body class="relative-position">
 		<header>
 			<h1>Todo List</h1>
 		</header>
@@ -17,53 +17,60 @@
 			</div>
 		</main>
 
-		<div class="new-project-input-dialog hidden" tabindex="0">
-			<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-new-project-input-dialog-btn" />
-			<label for="project-name">Enter project name:</label>
-			<input type="text" id="input-field-project-name" />
-			<button id="add-button">Add</button>
-		</div>
+		<dialog>
+			<div class="new-project-input-dialog">
+				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-new-project-input-dialog-btn" />
+				<label for="input-field-project-name">Enter project name:</label>
+				<input type="text" id="input-field-project-name" />
+				<button id="add-button">Add</button>
+			</div>
+		</dialog>
 
-		<form class="todo-popup-form hidden" tabindex="0">
-			<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-todo-popup-form-btn" />
-			<h2 id="todo-form-project-name">Project:</h2>
-			<div class="todo-name">
-				<label for="todo-name">Todo: </label>
-				<input type="text" id="todo-name" name="todo-name" spellcheck="false" />
-			</div>
-			<div class="description">
-				<label for="description">Description: </label>
-				<textarea name="description" id="description" cols="30" rows="5" spellcheck="false"></textarea>
-			</div>
-			<div class="due-date">
-				<label for="due-date">Due Date: </label>
-				<input type="date" id="due-date" name="due-date" />
-			</div>
-			<div class="status">
-				<fieldset>
-					<p>Status:</p>
-					<label for="not-started">Not Started</label>
-					<input type="radio" name="status" value="Not Started" id="not-started" checked />
-					<label for="in-progress">In-Progress</label>
-					<input type="radio" name="status" value="In-Progress" id="in-progress" />
-					<label for="complete">Complete</label>
-					<input type="radio" name="status" value="Complete" id="complete" />
-				</fieldset>
-			</div>
-			<div class="priority">
-				<label for="priority">Priority: </label>
-				<select name="priority" id="priority">
-					<option value="High">High</option>
-					<option value="Medium" selected>Medium</option>
-					<option value="Low">Low</option>
-				</select>
-			</div>
-			<div class="notes">
-				<label for="notes">Notes: </label>
-				<textarea name="notes" id="notes" cols="30" rows="5" spellcheck="false"></textarea>
-			</div>
-			<button type="button" id="checklist-btn">Checklist</button>
-			<button type="button" id="todo-save-btn">Save</button>
-		</form>
+		<dialog>
+			<form class="todo-popup-form">
+				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-todo-popup-form-btn" />
+				<h2 id="todo-form-project-name">Project:</h2>
+				<div class="todo-name">
+					<label for="todo-name">Todo: </label>
+					<input type="text" id="todo-name" name="todo-name" spellcheck="false" />
+				</div>
+				<div class="description">
+					<label for="description">Description: </label>
+					<textarea name="description" id="description" cols="30" rows="5" spellcheck="false"></textarea>
+				</div>
+				<div class="due-date">
+					<label for="due-date">Due Date: </label>
+					<input type="date" id="due-date" name="due-date" />
+				</div>
+				<div class="status">
+					<fieldset>
+						<p id="status-label">Status:</p>
+
+						<label for="not-started" class="status-options">Not Started</label>
+						<input type="radio" name="status" value="Not Started" id="not-started" checked />
+
+						<label for="in-progress" class="status-options">In-Progress</label>
+						<input type="radio" name="status" value="In-Progress" id="in-progress" />
+
+						<label for="complete" class="status-options">Complete</label>
+						<input type="radio" name="status" value="Complete" id="complete" />
+					</fieldset>
+				</div>
+				<div class="priority">
+					<label for="priority">Priority: </label>
+					<select name="priority" id="priority">
+						<option value="High">High</option>
+						<option value="Medium" selected>Medium</option>
+						<option value="Low">Low</option>
+					</select>
+				</div>
+				<div class="notes">
+					<label for="notes">Notes: </label>
+					<textarea name="notes" id="notes" cols="30" rows="5" spellcheck="false"></textarea>
+				</div>
+				<button type="button" id="checklist-btn">Checklist</button>
+				<button type="button" id="todo-save-btn">Save</button>
+			</form>
+		</dialog>
 	</body>
 </html>
