Added project edit and delete functionality

--- a/src/index.html
+++ b/src/index.html
@@ -72,5 +72,15 @@
 				<button type="button" id="todo-save-btn">Save</button>
 			</form>
 		</dialog>
+
+		<dialog>
+			<div class="confirmation-dialog">
+				<p id="confirmation-text">Are you sure you want to delete the project?</p>
+				<div class="yesnobuttonsdiv">
+					<button id="yes-button">Yes</button>
+					<button id="no-button">No</button>
+				</div>
+			</div>
+		</dialog>
 	</body>
 </html>
