Added checklist UI

--- a/src/index.html
+++ b/src/index.html
@@ -82,5 +82,21 @@
 				</div>
 			</div>
 		</dialog>
+
+		<dialog>
+			<form class="checklist">
+				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-checklist-btn" />
+				<div class="checklist-items-div">
+					<div class="input-field-div-for-new-item display-none">
+						<input type="text" id="input-field-for-new-item" spellcheck="false" />
+						<button type="button" id="save-new-checklist-item-btn">Save Item</button>
+					</div>
+				</div>
+				<div class="checklist-bottom-buttons-div">
+					<button type="button" id="add-new-item-btn">Add New Item</button>
+					<button type="button" id="done-checklist-btn">Done</button>
+				</div>
+			</form>
+		</dialog>
 	</body>
 </html>
