--- a/src/index.html
+++ b/src/index.html
@@ -86,6 +86,7 @@
 		<dialog>
 			<form class="checklist">
 				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-checklist-btn" />
+				<h2 id="checklist-heading">Checklist</h2>
 				<div class="checklist-items-div">
 					<div class="input-field-div-for-new-item display-none">
 						<input type="text" id="input-field-for-new-item" spellcheck="false" />
