Fully moduarized the code

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 			<div class="new-project-input-dialog">
 				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-new-project-input-dialog-btn" />
 				<label for="input-field-project-name">Enter project name:</label>
-				<input type="text" id="input-field-project-name" />
+				<input type="text" id="input-field-project-name" spellcheck="false" />
 				<button id="add-button">Add</button>
 			</div>
 		</dialog>
