--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
 		<main>
 			<div>
 				<p style="font-size: 1.2rem">Add New Project</p>
-				<img src="./plus.png" alt="Add New Project" width="100" height="auto" id="plus" />
+				<img src="./img/plus.png" alt="Add New Project" width="100" height="auto" id="plus" />
 			</div>
 		</main>
 
 		<dialog>
 			<div class="new-project-input-dialog">
-				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-new-project-input-dialog-btn" />
+				<img src="./img/close.jpg" alt="Close" width="10" height="auto" id="close-new-project-input-dialog-btn" />
 				<label for="input-field-project-name">Enter project name:</label>
 				<input type="text" id="input-field-project-name" spellcheck="false" />
 				<button id="add-button">Add</button>
@@ -28,7 +28,7 @@
 
 		<dialog>
 			<form class="todo-popup-form">
-				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-todo-popup-form-btn" />
+				<img src="./img/close.jpg" alt="Close" width="10" height="auto" id="close-todo-popup-form-btn" />
 				<h2 id="todo-form-project-name">Project:</h2>
 				<div class="todo-name">
 					<label for="todo-name">Todo: </label>
@@ -85,7 +85,7 @@
 
 		<dialog>
 			<form class="checklist">
-				<img src="./close.jpg" alt="Close" width="10" height="auto" id="close-checklist-btn" />
+				<img src="./img/close.jpg" alt="Close" width="10" height="auto" id="close-checklist-btn" />
 				<h2 id="checklist-heading">Checklist</h2>
 				<div class="checklist-items-div">
 					<div class="input-field-div-for-new-item display-none">
